--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,7 +9,6 @@ html {
 }
 body{
  font-family: FreeSans;
- text-align: center;
  padding-top: 60px;
 }
 
@@ -26,6 +25,12 @@ footer {
 h1{
  color: green;
  font-weight: bold;
+ font-size: 40px;
+ letter-spacing: -2px;
+ margin-bottom: 30px;
+ text-align: center;
+ float: left;
+ margin-left: 15px;
 }
 
 #menu{
@@ -40,17 +45,122 @@ h1{
       transition: all 0.4s ease-in-out;
     }
   }
- .active{
-   a{
-     background-color: green;
-     color:#fff;
-     }
+.active{
+  a{
+    background-color: green;
+    color:#fff;
+    }
   }
 }
 @media(max-width: 767px){
    #menu{
     #logo{
      margin: 0 0 0 45px;
-     }
+    }
+  }
+}
+/* mixins, variables, etc. */
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+ }
+
+ /* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+ }
+
+ input {
+   height: auto !important;
+ }
+
+ /* forms */
+
+#error_explanation {
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .has-error;
+.form-control {
+    color: $state-danger-text;
    }
 }
+
+ /* sidebar */
+
+ aside {
+  section.user_info {
+    margin-top: 20px;
+  }
+  section {
+    padding: 10px 0;
+    margin-top: 20px;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 30px;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+ }
+
+.gravatar_edit {
+  margin-top: 15px;
+}
+.debug_dump{
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+}
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
+
+ h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+ h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: $gray-light;
+}
+
+ p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
