--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,3 @@
-<% provide :title, t("title") %>
+<%= provide :title, t("home") %>
 <h1><i class="fa fa-book"></i> <%= t "head" %></h1>
-<%= t ".ct" %>
+
